--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,9 +5,11 @@ repos:
       - id: ruff
         args:
           - --config=pyproject.toml
+        exclude: '\.ipynb$'
       - id: ruff-format
         args:
           - --config=pyproject.toml
+        exclude: '\.ipynb$'
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.43.0
     hooks:
