--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dev = [
 
 [project]
 authors = [
-    "Mack Nixon <mack.nixon@ucl.ac.uk>",
+    {email = "mack.nixon@ucl.ac.uk", name = "Mack Nixon"},
 ]
 dependencies = [
     "fitz>=0.0.1.dev2",
@@ -20,10 +20,16 @@ dependencies = [
     "langchain-core>=1.0.5",
     "levenshtein>=0.27.3",
     "loguru>=0.7.3",
+    "matplotlib>=3.10.7",
+    "opencv-python>=4.12.0.88",
+    "paddleocr>=3.3.1",
+    "paddlepaddle>=3.2.2",
     "pdf2image>=1.17.0",
+    "pyaml>=25.7.0",
     "pydantic>=2.12.3",
     "pypdfium2>=5.0.0",
-    "pyyaml>=6.0.3",
+    "setuptools>=80.9.0",
+    "torch>=2.9.1",
     "transformers>=4.57.1",
 ]
 description = "Tool for extracting ner data from hand written forms using ocr/llms"
