--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,16 @@
+# ---------------------------------------------------------------------
+# DEPENDENCY GROUPS
+# ---------------------------------------------------------------------
+
 [dependency-groups]
+# HEAVYWEIGHT, SLOW PACKAGES — put into your BASE Docker image
+base = [
+    "opencv-python>=4.12.0.88",
+    "paddleocr>=3.3.1",
+    "paddlepaddle>=3.2.2",
+    "torch>=2.9.1",
+    "transformers>=4.57.1",
+]
 dev = [
     "mypy>=1.17.1",
     "pre-commit>=4.3.0",
@@ -14,6 +26,7 @@ authors = [
     {email = "mack.nixon@ucl.ac.uk", name = "Mack Nixon"},
 ]
 dependencies = [
+    "accelerate>=1.12.0",
     "fitz>=0.0.1.dev2",
     "frontend>=0.0.3",
     "ipython>=9.6.0",
@@ -22,20 +35,17 @@ dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.10.7",
     "opencv-python>=4.12.0.88",
-    "paddleocr>=3.3.1",
-    "paddlepaddle>=3.2.2",
     "pdf2image>=1.17.0",
     "pyaml>=25.7.0",
     "pydantic>=2.12.3",
     "pypdfium2>=5.0.0",
     "setuptools>=80.9.0",
-    "torch>=2.9.1",
-    "transformers>=4.57.1",
+    "types-pyyaml>=6.0.12.20250915",
 ]
 description = "Tool for extracting ner data from hand written forms using ocr/llms"
 name = "ner-ocr"
 readme = "README.md"
-requires-python = ">=3.13.5"
+requires-python = ">=3.13"
 version = "0.1.0"
 
 [[tool.mypy.overrides]]
@@ -51,7 +61,7 @@ testpaths = ["tests"]
 extend-exclude = ["app/migrations/versions/*.py", "docs/*.py"]
 fix = true
 force-exclude = true
-target-version = "py312"
+target-version = "py313"
 lint.ignore = [
     "ANN003", # kwargs type annotation required
     "ARG002", # kwargs unused
