--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,11 @@
 # ---------------------------------------------------------------------
 
 [dependency-groups]
-# HEAVYWEIGHT, SLOW PACKAGES — put into your BASE Docker image
+# note in the docker we install these manually, for local you will need them
 base = [
-    "opencv-python>=4.12.0.88",
-    "paddleocr>=3.3.1",
+    "accelerate>=1.12.0",
     "paddlepaddle>=3.2.2",
     "torch>=2.9.1",
-    "transformers>=4.57.1",
 ]
 dev = [
     "mypy>=1.17.1",
@@ -26,7 +24,6 @@ authors = [
     {email = "mack.nixon@ucl.ac.uk", name = "Mack Nixon"},
 ]
 dependencies = [
-    "accelerate>=1.12.0",
     "fitz>=0.0.1.dev2",
     "frontend>=0.0.3",
     "ipython>=9.6.0",
@@ -35,11 +32,13 @@ dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.10.7",
     "opencv-python>=4.12.0.88",
+    "paddleocr>=3.3.1",
     "pdf2image>=1.17.0",
     "pyaml>=25.7.0",
     "pydantic>=2.12.3",
     "pypdfium2>=5.0.0",
     "setuptools>=80.9.0",
+    "transformers>=4.57.1",
     "types-pyyaml>=6.0.12.20250915",
 ]
 description = "Tool for extracting ner data from hand written forms using ocr/llms"
